# wazo-libsccp

./: .gitignore  .pre-commit-config.yaml  AUTHORS  Dockerfile  Dockerfile_SCCP_PHONE  Jenkinsfile  Makefile  README  README.md  buildh  configure.ac  pyproject.toml  sccp.c  sccp_config.c  sccp_config.h  sccp_debug.c  sccp_device.c  sccp_device.h  sccp_device_registry.c  sccp_device_registry.h  sccp_msg.c  sccp_msg.h  sccp_server.c  sccp_server.h  sccp_session.c  sccp_task.c  sccp_utils.c  sccp_utils.h  skinny.conf
configs/: buildh.conf.sample  sccp.conf.sample
debian/: changelog  control  copyright  rules
device/: sccp_channel_tech.h  sccp_rtp_glue.h
doc/: concurrent-access-flow.dia  generation-conf-dhcp.dia  generation-conf-sccp.dia  init-phone-sccp.dia  sccp-phone-line-fsm.dia
src/: Makefile.am  TODO  device.c  device.h  main.c  message.c  message.h  sccp.c  sccp.h
tests/: Makefile  README  run
tests/assets/: docker-compose.yml
tests/assets/etc/asterisk/: extensions.conf  sccp.conf
tests/libsccp_tests/: common.py  device.py  event.py  group.py  main.py  rtp.py  socketproxy.py
tests/libsccp_tests/tests/: test_device.py  test_event.py  test_group.py  test_rtp.py
tests/sccp/: const.py
tests/sccp/msg/: base.py  msg.py  serialize.py
tests/sccp/msg/tests/: test_base.py  test_msg.py  test_serialize.py
tests/src/: config.py  config.py_example  sccp_tests.py  sccpclient.py  sccpphone.py
tests/src/actors/: callactor.py
tests/src/gui/: softkeys.py
tests/src/network/: sccpclientfactory.py
tests/src/sccp/: messagefactory.py  sccpcallstate.py  sccpcapabilities.py  sccpmessage.py  sccpregister.py
tests/src/tests/: test_sccpphone.py
tests/suite/: test_sccp.py
testsuite/sccp/: tests.yaml
testsuite/sccp/connect/: run-test  test-config.yaml
testsuite/sccp/connect/configs/ast1/: skinny.conf
testsuite/sccp/loaded/: run-test  test-config.yaml
testsuite/sccp/loaded/configs/ast1/: skinny.conf
utils/: sccp-confgen
xivo-libsccp/: Doxyfile  Makefile  Makefile.am  Makefile.pkg  README  buildh  config_undef.h  configure.ac  print_version  sccp.c  sccp.h  sccp_config.c  sccp_config.h  sccp_debug.c  sccp_debug.h  sccp_device.c  sccp_device.h  sccp_device_registry.c  sccp_device_registry.h  sccp_msg.c  sccp_msg.h  sccp_queue.c  sccp_queue.h  sccp_serializer.c  sccp_serializer.h  sccp_server.c  sccp_server.h  sccp_session.c  sccp_session.h  sccp_task.c  sccp_task.h  sccp_utils.c  sccp_utils.h
xivo-libsccp/build-tools/: buildh
xivo-libsccp/configs/: sccp.conf.sample
xivo-libsccp/debian/: changelog  control  copyright  rules  xivo-libsccp.install
xivo-libsccp/device/: sccp_channel_tech.h
xivo-libsccp/src/: Doxyfile  Makefile.am  device.c  device.h  main.c  message.c  message.h  sccp.c  sccp.h  sccp_config.c  sccp_config.h  sccp_debug.c  sccp_debug.h  sccp_device.c  sccp_device.h  sccp_line.c  sccp_line.h  sccp_main.c  sccp_message.c  sccp_message.h  sccp_task.c  sccp_task.h  sccp_test_helpers.h  sccp_utils.h  test_config.c  test_message.c
xivo-libsccp/utils/: sccp-confgen
