[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "wazo-libsccp"
description = "asterisk module implementation to support sccp protocol"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
version = "0.2"

[tools.setuptools]

[tool.black]
skip-string-normalization = true

[tool.mypy]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
ignore_missing_imports = true
check_untyped_defs = true
explicit_package_bases = true
scripts_are_modules = true

[tool.flake8]
exclude = ".tox,.eggs,.venv"
show-source = true
# E501: line too long (80 chars)
# W503: line break before binary operator
ignore = "E501, W503"
max-line-length = 99
application-import-names = "wazo_confgend"
